# douyin-compass-collector

./: .env.example  .gitignore  Makefile  README.md  alembic.ini  pyproject.toml  使用说明.md
.github/workflows/: package-desktop.yml  publish-github-pages.yml
assets/icons/: douyin-compass.icns
config/: tasks.yaml
docs/: 备份与恢复.md  工程方案.md  故障处理.md
launchd/: com.zhuanz1.douyin-compass-collector.plist.template
migrations/: env.py
migrations/versions/: 0001_initial.py  0002_batch_filter_snapshot.py  0002_scheduler_checkpoints.py  0003_unbounded_partial_success_failures.py  0004_product_image_url.py
scripts/: create_app_icons.py  install_launchd.sh  package_pyinstaller.py  status_launchd.sh  uninstall_launchd.sh
src/compass_collector/: __init__.py  __main__.py  app_paths.py  browser.py  category_batch.py  category_collection.py  category_discovery.py  cli.py  config.py  errors.py  exporter.py  gui.py  http_client.py  local_data.py  models.py  notifier.py  oss_uploader.py  persistence.py  product_rank.py  raw_storage.py  retention.py  run_control.py  runner.py  runtime_locks.py  runtime_logging.py  scheduler.py  scheduler_control.py  vercel_deployer.py  web_publisher.py
tests/: current_contract.py  test_app_paths.py  test_batch_storage.py  test_browser.py  test_category_batch.py  test_category_batch_persistence.py  test_category_collection.py  test_category_discovery.py  test_config.py  test_contract.py  test_dynamic_docs.py  test_dynamic_gui.py  test_dynamic_scheduler.py  test_exporter.py  test_http_client.py  test_local_data.py  test_notifications.py  test_oss_uploader.py  test_pagination.py  test_raw_storage.py  test_runner_dynamic.py  test_scheduler_control.py  test_schema_baseline.py  test_stage_five.py  test_stage_four.py  test_stage_four_persistence.py  test_stage_six.py  test_stage_three.py  test_stage_three_batch_storage.py  test_stage_three_storage.py  test_stage_two.py  test_windows_packaging.py
tests/fixtures/: category_tree.json  product_rank_page.json
web/: index.html  package-lock.json  package.json  vite.config.ts
web/src/: main.tsx  styles.css  types.ts
web/src/components/: BottomSheet.tsx  CompositeFilterSheet.tsx  DesktopRankingView.tsx  MobileFilterSheet.tsx  MobileRankingView.tsx  ProductThumbnail.tsx  RankMark.tsx  TruncatedTooltip.tsx
web/src/hooks/: useInfiniteReveal.ts  (+2 more)
(+4 files in other folders)
