[project]
name = "douyin-compass-collector"
version = "0.1.0"
description = "Collect Douyin Compass product ranking data through a logged-in Chrome profile."
requires-python = ">=3.12,<3.13"
dependencies = [
  "httpx>=0.28,<0.29",
  "playwright>=1.53,<2",
  "pydantic>=2.11,<3",
  "pyyaml>=6.0,<7",
]

[dependency-groups]
dev = [
  "pytest>=8.4,<9",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/compass_collector"]

[tool.pytest.ini_options]
addopts = "-q"
testpaths = ["tests"]
pythonpath = ["src"]
