[project]
name = "douyin-compass-collector"
version = "0.1.0"
description = "Collect Douyin Compass product ranking data through a logged-in Chrome profile."
requires-python = ">=3.12,<3.13"
dependencies = [
  "alembic>=1.16,<2",
  "apscheduler>=3.11,<4",
  "httpx>=0.28,<0.29",
  "playwright>=1.53,<2",
  "pydantic>=2.11,<3",
  "pyside6>=6.8,<7",
  "python-dotenv>=1.1,<2",
  "pyyaml>=6.0,<7",
  "sqlalchemy>=2.0,<3",
]

[dependency-groups]
dev = [
  "pytest>=8.4,<9",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/compass_collector"]

[tool.pytest.ini_options]
addopts = "-q"
testpaths = ["tests"]
pythonpath = ["src"]
